--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Concepting Whatsapp Gateway Problem Under Baileys Platform",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "figlet": "^1.8.0",
+    "qrcode-terminal": "^0.12.0",
+    "simple-banner": "^1.1.3",
+    "whatsapp-web.js": "^1.26.0"
   }
 }
