--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "figlet": "^1.8.0",
+    "nodemon": "^3.1.9",
     "qrcode-terminal": "^0.12.0",
     "simple-banner": "^1.1.3",
-    "whatsapp-web.js": "^1.26.0"
+    "whatsapp-web.js": "^1.26.1-alpha.3"
   }
 }
